--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.3.3",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
